--- a/RepairHub.Domain/RepairHub.Domain.csproj
+++ b/RepairHub.Domain/RepairHub.Domain.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
+    <ProjectReference Include="..\RepairHub.Database\RepairHub.Database.csproj" />
   </ItemGroup>
 
 </Project>
