--- a/RepairHub.Mvc/RepairHub.Mvc.csproj
+++ b/RepairHub.Mvc/RepairHub.Mvc.csproj
@@ -8,10 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="EFCore.NamingConventions" Version="8.0.3" />
     <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="MediatR.Extensions.FluentValidation.AspNetCore" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
@@ -25,12 +26,12 @@
     <Folder Include="Infrastructure\Commands\AddEntity\" />
     <Folder Include="Infrastructure\Commands\EditEntity\" />
     <Folder Include="Infrastructure\Commands\DeleteEntity\" />
-    <Folder Include="Infrastructure\Queries\GetData\" />
     <Folder Include="Infrastructure\Queries\GetEntityById\" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RepairHub.Database\RepairHub.Database.csproj" />
+    <ProjectReference Include="..\RepairHub.Domain\RepairHub.Domain.csproj" />
   </ItemGroup>
 
 </Project>
