--- a/RepairHub.Mvc/appsettings.json
+++ b/RepairHub.Mvc/appsettings.json
@@ -7,11 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "host=localhost;username=root;password=123;database=repairhub"
-  },
-  "JwtSettings": {
-    "Key": "ULgob3DnHSvlSsYvWYwjVgJksfh92h1s",
-    "Issuer": "https://localhost:443",
-    "Audience": "https://localhost:443"
+    "DefaultConnection": "host=localhost;username=repair;password=123;database=repair"
   }
 }
