--- a/RepairHub.Mvc/appsettings.json
+++ b/RepairHub.Mvc/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "host=localhost;username=repair;password=123;database=repair"
-  }
+  "AllowedHosts": "*"
 }
