--- a/RepairHub.Mvc/appsettings.Development.json
+++ b/RepairHub.Mvc/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "DeleteDatabase": true
+  "ConnectionStrings": {
+    "postgres": "host=localhost;username=repair;password=123;database=repair"
+  },
+  "UseInMemoryDb": false,
+  "DeleteDatabase": false
 }
