--- a/RepairHub.Mvc/appsettings.Development.json
+++ b/RepairHub.Mvc/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "postgres": "host=localhost;username=repair;password=123;database=repair"
+    "postgres": "host=localhost;username=test;password=123;database=repair"
   },
   "UseInMemoryDb": false,
   "DeleteDatabase": false
